# ZitzInterpreter

./: CMakeLists.txt  LICENSE  README.md  ZitzLexer.l  ZitzParser.y
Maps/: 0_commands.txt  0_robot.json  1_commands.txt  1_map.json  1_robot.json  2_commands.txt  2_map.json  2_robot.json
Programs/: Factorial.ztz  FactorialRecursive.ztz  ParserErrorRunTime_1.ztz  ParserResult_1_TEST.txt  ParserResult_2_TEST.txt  ParserResult_3.txt  ParserResult_4_TEST.txt  ParserResult_5.txt  ParserResult_6.txt  ParserResult_7.txt  ParserResult_8.txt  ParserTest_1.ztz  ParserTest_2.ztz  ParserTest_3.ztz  ParserTest_4.ztz  ParserTest_5.ztz  ParserTest_6.ztz  ParserTest_7.ztz  ParserTest_8.ztz  RobotProgram.ztz  RobotProgram_1.ztz
include/: ZitzInterpreter.h
